Correct merge method